[tool.poetry]
name = "fastapi-neon"
version = "0.1.0"
description = ""
authors = ["HR Suriya <mhrsuriya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
pytest = "^8.1.1"
httpx = "^0.27.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
